<resources>
    <string name="textView5" translatable="false">Your profile</string>
    <string name="yourname" translatable="false">Your name</string>
    <string name="editText7" translatable="false">textPersonName</string>
    <string name="textView8" translatable="false">Your email</string>
    <string name="editText9" translatable="false">textEmailAddress</string>
    <string name="textView10" translatable="false">Your picture</string>
    <string name="imgbtn" translatable="false">Switch on/off</string>
    <string name="textView11" translatable="false">Click the button above to take a picture</string>
    <string name="app_name" translatable="false">andriodlab3</string>
    <string name="buttonRecieve" translatable="false">buttonRecieve</string>
    <string name="buttonSend" translatable="false">buttonSend</string>
    <string name="buttonGotoChat" translatable="false">buttonGotoChat</string>
    <string name="hello_message">hello!</string>
    <string name="ButtonText">ButtonText</string>
    <string name="Textwidget">Textwidget!</string>
    <string name="TextButton">TextButton</string>
    <string name="CheckButton">CheckButton</string>
    <string name="SwitchButton">SwitchButton</string>
    <string name="hintText">hintText</string>
</resources>
